--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -1,3 +1,20 @@
-.test {
-  background-color: red;
+@use '../styles/_colors.scss';
+
+.search-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.cards {
+  margin: 32px 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  gap: 56px;
+}
+
+.card {
+  height: 260px;
+  // width: 200px;
+  background-color: colors.$dark-blue;
 }
