--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -5,3 +5,5 @@ $dark-blue-text: #111517;
 $dark-gray: #858585;
 $light-dark-gray: #fafafa;
 $white: #ffffff;
+
+$shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
