--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,6 +13,7 @@ body {
   font-family: 'Nunito Sans', sans-serif;
   font-weight: typo.$medium;
   color: colors.$white;
+  background-color: colors.$dark-blue-bg;
 }
 
 p,
@@ -24,4 +25,17 @@ h5,
 h6 {
   font-weight: typo.$medium;
   color: colors.$white;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: colors.$dark-blue-text;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: colors.$dark-gray;
+  border-radius: 4px;
 }
