--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,6 +16,18 @@ body {
   background-color: colors.$dark-blue-bg;
 }
 
+button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: colors.$white;
+}
+
 p,
 h1,
 h2,
