--- a/src/controllers/SelectController.module.scss
+++ b/src/controllers/SelectController.module.scss
@@ -6,14 +6,14 @@
   align-items: center;
   justify-content: space-between;
   border-radius: 4px;
-  background-color: colors.$dark-blue;
+  background-color: var(--dark-blue);
   height: 36px;
   width: 180px;
   border: none;
   outline: none;
   padding: 4px 16px;
   font-size: 0.875rem;
-  color: colors.$light-dark-gray;
+  color: var(--light-dark-gray);
   font-weight: typo.$light;
   box-shadow: colors.$shadow;
 }
@@ -25,14 +25,14 @@
 
 .content {
   overflow: hidden;
-  background-color: colors.$dark-blue;
+  background-color: var(--dark-blue);
   border-radius: 4px;
   box-shadow: colors.$shadow;
 }
 
 .item {
   font-size: 0.875rem;
-  color: colors.$light-dark-gray;
+  color: var(--light-dark-gray);
   font-weight: typo.$light;
   cursor: pointer;
   height: 28px;
