--- a/src/pages/Details.module.scss
+++ b/src/pages/Details.module.scss
@@ -3,6 +3,10 @@
 
 .back {
   margin-top: 32px;
+
+  @media (max-width: 840px) {
+    margin-top: 12px;
+  }
 }
 
 .content {
@@ -10,28 +14,52 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @media (max-width: 840px) {
+    margin-top: 52px;
+    flex-direction: column;
+    gap: 48px;
+  }
 }
 
 .image {
   height: 320px;
   width: 50%;
   object-fit: cover;
+
+  @media (max-width: 840px) {
+    height: 240px;
+    width: 100%;
+  }
 }
 
 .details {
   width: 40%;
+
+  @media (max-width: 840px) {
+    width: 100%;
+  }
 }
 
 .title {
   font-size: 1.5rem;
   font-weight: typo.$bold;
   margin-bottom: 32px;
+
+  @media (max-width: 840px) {
+    margin-bottom: 24px;
+  }
 }
 
 .info {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 1fr;
+
+  @media (max-width: 840px) {
+    row-gap: 48px;
+    grid-template-columns: 1fr;
+  }
 }
 
 .first,
@@ -43,11 +71,11 @@
   p {
     font-size: 0.75rem;
     font-weight: typo.$light;
-    color: colors.$light-dark-gray;
+    color: var(--light-dark-gray);
 
     span {
       font-weight: typo.$bold;
-      color: colors.$white;
+      color: var(--white);
     }
   }
 }
@@ -61,7 +89,14 @@
   p {
     font-size: 0.75rem;
     font-weight: typo.$bold;
-    color: colors.$white;
+    color: var(--white);
+  }
+
+  @media (max-width: 840px) {
+    margin-top: 48px;
+    flex-direction: column;
+    align-items: start;
+    margin-bottom: 32px;
   }
 }
 
