--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -6,4 +6,4 @@ $dark-gray: #858585;
 $light-dark-gray: #fafafa;
 $white: #ffffff;
 
-$shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+$shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.2);
